--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="speech-controls">
             <button id="btnSpeak">朗读</button>
             <button id="btnStop">停止</button>
-            <label class="small audio-rate">速率 <input id="rate" type="number" min="0.6" max="2" step="0.1" value="1" style="width: 60px;"></label>
+            <label class="small audio-rate">速率 <select id="rate" class="audio-select"></select></label>
             <label class="small audio-filter">音色筛选 <input id="voiceFilter" type="text" placeholder="输入关键字"></label>
             <select id="voiceSelect" class="audio-select"></select>
           </div>
