交互优化：增加夜间模式，优化点就朗读交互

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <button id="btnToggleSearch" class="ghost">搜索</button>
         <button id="btnToggleSync" class="ghost">同步</button>
         <button id="btnSyncSettings" class="ghost">同步设置</button>
+        <button id="btnToggleTheme" class="ghost">夜间模式</button>
       </div>
     </header>
 
@@ -80,7 +81,7 @@
         <div style="margin-left:auto;display:flex;gap:8px;align-items:center;flex-wrap:wrap">
           <div class="speech-controls">
             <button id="btnSpeak">朗读</button>
-            <button id="btnStop">停止</button>
+
             <label class="small audio-rate">速率 <select id="rate" class="audio-select"></select></label>
             <label class="small audio-filter">音色筛选 <input id="voiceFilter" type="text" placeholder="输入关键字"></label>
             <select id="voiceSelect" class="audio-select"></select>
