--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <header>
-      <h1>阅读器</h1>
+      <h1>XReader</h1>
       <div class="controls">
         <label class="ghost file-pill">
           打开文件<input id="fileInput" type="file" accept=".txt" style="display:none">
