删除测试代码

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <div style="margin-left:auto;display:flex;gap:8px;align-items:center;flex-wrap:wrap">
           <div class="speech-controls">
             <button id="btnSpeak">朗读</button>
-
             <label class="small audio-rate">速率 <select id="rate" class="audio-select"></select></label>
-            <label class="small audio-filter">音色筛选 <input id="voiceFilter" class="audio-select" type="text" placeholder="输入关键字"></label>
+            <label class="small audio-filter">音色 <input id="voiceFilter" class="audio-select" type="text" placeholder="输入关键字"></label>
             <select id="voiceSelect" class="audio-select"></select>
           </div>
           <button id="btnPrev" class="ghost">上一页</button>
